--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/text_view_2"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,4 +50,12 @@
         android:text="View 5"
         app:layout_constraintStart_toEndOf="@id/text_view_1"
         app:layout_constraintTop_toBottomOf="@id/text_view_1"/>
+
+    <TextView
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View 6"
+        app:layout_constraintStart_toStartOf="@id/text_view_2"
+        app:layout_constraintBottom_toTopOf="@id/text_view_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
