--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,55 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/text_view_1"
-        android:textSize="20sp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_line_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#f20"
         android:text="View 1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guide_line_vertical"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/text_view_2"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 2"
-        app:layout_constraintBottom_toTopOf="@id/text_view_1"
-        app:layout_constraintEnd_toStartOf="@id/text_view_1"/>
-
-    <TextView
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 3"
-        app:layout_constraintStart_toEndOf="@id/text_view_1"
-        app:layout_constraintBottom_toTopOf="@id/text_view_1"/>
-
-    <TextView
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 4"
-        app:layout_constraintTop_toBottomOf="@id/text_view_1"
-        app:layout_constraintEnd_toStartOf="@id/text_view_1"/>
-
-    <TextView
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 5"
-        app:layout_constraintStart_toEndOf="@id/text_view_1"
-        app:layout_constraintTop_toBottomOf="@id/text_view_1"/>
-
-    <TextView
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View 6"
-        app:layout_constraintStart_toStartOf="@id/text_view_2"
-        app:layout_constraintBottom_toTopOf="@id/text_view_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
